compiler/example/test-utils/invalid-type-datamodel/go.mod
module github.com/vmware-tanzu/graph-framework-for-microservices/compiler/example/test-utils/invalid-type-datamodel

go 1.17

require gitlab.eng.vmware.com/nsx-allspark_users/nexus-sdk/common-library.git v0.0.0-20220425104724-aada688df39f
